#1501: Modified GetTransactions UC to extend BasePaginatedMultipleEntitiesCommand